changing to float32 model inputs

--- a/pico-light-voice/CMakeLists.txt
+++ b/pico-light-voice/CMakeLists.txt
@@ -13,6 +13,7 @@ pico_sdk_init()
 
 add_executable(pico-voice
   source/main.cpp
+  source/lights.cpp
   )
 
 include(${MODEL_FOLDER}/edge-impulse-sdk/cmake/utils.cmake)
